WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267206
Fix warnings found by compiling with -Wdeprecated-enum-float-conversion
https://bugs.webkit.org/show_bug.cgi?id=267206
Summary
Fix warnings found by compiling with -Wdeprecated-enum-float-conversion
David Kilzer (:ddkilzer)
Reported
2024-01-07 08:46:57 PST
Fix warnings found by compiling with -Wdeprecated-enum-float-conversion. Examples: Source/WebCore/rendering/style/TextSizeAdjustment.h:41:52: error: comparison of floating-point type 'float' with enumeration type 'WebCore::TextSizeAdjustmentType' is deprecated [-Werror,-Wdeprecated-enum-float-conversion] 41 | constexpr bool isAuto() const { return m_value == AutoTextSizeAdjustment; } | ~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~ Source/WebCore/rendering/style/TextSizeAdjustment.h:42:52: error: comparison of floating-point type 'float' with enumeration type 'WebCore::TextSizeAdjustmentType' is deprecated [-Werror,-Wdeprecated-enum-float-conversion] 42 | constexpr bool isNone() const { return m_value == NoTextSizeAdjustment; } | ~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~ 2 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-07 08:47:11 PST
<
rdar://problem/120610023
>
David Kilzer (:ddkilzer)
Comment 2
2024-01-07 08:49:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22488
EWS
Comment 3
2024-01-09 07:56:48 PST
Committed
272819@main
(c5050dfe5824): <
https://commits.webkit.org/272819@main
> Reviewed commits have been landed. Closing PR #22488 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug